tests/baselines/reference/equalityWithEnumTypes.errors.txt
equalityWithEnumTypes.ts(14,9): error TS2367: This comparison appears to be unintentional because the types 'E1' and '0' have no overlap.
equalityWithEnumTypes.ts(23,9): error TS2367: This comparison appears to be unintentional because the types 'E1' and '3' have no overlap.
equalityWithEnumTypes.ts(29,9): error TS2367: This comparison appears to be unintentional because the types 'E2' and '0' have no overlap.
equalityWithEnumTypes.ts(38,9): error TS2367: This comparison appears to be unintentional because the types 'E2' and '3' have no overlap.


==== equalityWithEnumTypes.ts (4 errors) ====
    // Literal enum type
    enum E1 {
        a = 1,
        b = 2,
    }
    
    // Numeric enum type
    enum E2 {
        a = 1 << 0,
        b = 1 << 1
    }
    
    function f1(v: E1) {
        if (v !== 0) {  // Error
            ~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'E1' and '0' have no overlap.
            v;
        }
        if (v !== 1) {
            v;
        }
        if (v !== 2) {
            v;
        }
        if (v !== 3) {  // Error
            ~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'E1' and '3' have no overlap.
            v;
        }
    }
    
    function f2(v: E2) {
        if (v !== 0) {
            ~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'E2' and '0' have no overlap.
            v;
        }
        if (v !== 1) {
            v;
        }
        if (v !== 2) {
            v;
        }
        if (v !== 3) {
            ~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'E2' and '3' have no overlap.
            v;
        }
    }
    